<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_products"
        android:title="@string/products" />
    <item
        android:id="@+id/nav_orders"
        android:title="@string/orders" />
    <item
        android:id="@+id/nav_inventory"
        android:title="@string/inventory" />
    <item
        android:id="@+id/nav_reports"
        android:title="@string/reports" />
    <item
        android:id="@+id/nav_setup"
        android:title="@string/setup" />
    <item
        android:id="@+id/nav_cash_drawer"
        android:title="@string/cash_drawer" />
    <item
        android:id="@+id/nav_quick_access"
        android:title="@string/quick_access" />
</menu>
